NIFI-16021 Implemented review suggestion